Fixed Whitespace and Cleaned up Files

--- a/default.css
+++ b/default.css
@@ -24,7 +24,3 @@ html, body {
 	text-align: center;
 	overflow: scroll;
 }
-
-.address {
-	font-size: 16px;
-}
